--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "my first socket.io app",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.1.2",
+    "pkg.json": "^2.0.8"
   }
 }
